k8s/dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: gestionalarme-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      imagePullSecrets:
        - name: dockerhub-secret

      containers:
        - name: backend

          image: brichnik/gestion-alarme-pfe:backend-latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
