k8s/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: gestionalarme-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      imagePullSecrets:
        - name: dockerhub-secret

      containers:
        - name: frontend
          image: brichnik/gestion-alarme-pfe:frontend-latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
