k8s/dev/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mosquitto
  namespace: gestionalarme-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mosquitto

  template:
    metadata:
      labels:
        app: mosquitto

    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2

          ports:
            - containerPort: 1883
