k8s/dev/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sqlserver
  namespace: gestionalarme-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sqlserver

  template:
    metadata:
      labels:
        app: sqlserver

    spec:

      containers:
        - name: sqlserver

          image: mcr.microsoft.com/mssql/server:2022-latest

          ports:
            - containerPort: 1433

          volumeMounts:
            - name: sqlserver-storage
              mountPath: /var/opt/mssql

      volumes:
        - name: sqlserver-storage
          persistentVolumeClaim:
            claimName: sqlserver-pvc-dev
