k8s/dev/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: gestionalarme-dev

  labels:
    app: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
