k8s/dev/mqtt-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mqtt-service
  namespace: gestionalarme-dev

spec:
  type: ClusterIP

  selector:
    app: mosquitto

  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
