k8s/dev/sqlserver-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sqlserver-service
  namespace: gestionalarme-dev

spec:
  type: ClusterIP

  selector:
    app: sqlserver

  ports:
    - name: sql
      port: 1433
      targetPort: 1433
      protocol: TCP
