k8s/dev/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: gestionalarme-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /cm
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
